# tier4_autoware_msgs

./: .pre-commit-config.yaml  build_depends.repos
.github/: sync-files.yaml
.github/workflows/: build-and-test.yaml  sync-with-upstream.yaml
autoware_ad_api_msgs/: CMakeLists.txt
autoware_ad_api_msgs/fail_safe/msg/: MrmState.msg
autoware_ad_api_msgs/temp/: AutowareLauncherCommand.srv  AutowareLauncherState.msg  DoorCommand.msg  DoorOperate.srv  DoorStatus.msg  DoorStatusArray.msg  FailSafeExternalStop.srv  RecognitionArea.msg  RecognitionAreaArray.msg  RecognitionObjectArray.msg  RecognitionReference.msg  VehicleStatus.msg
autoware_ad_api_msgs/vehicle/msg/: Energy,msg  Gear.msg  HazardLights.msg  TurnIndicators.msg  VehicleStatus.msg
autoware_iv_auto_msgs_converter/: package.xml
autoware_multimedia_msgs/: CMakeLists.txt  package.xml
autoware_multimedia_msgs/srv/: Announce.srv
autoware_planning_msgs/: CMakeLists.txt
autoware_planning_msgs/msg/: PathChangeModuleId.msg  VelocityLimit.msg
autoware_vehicle_msgs/: CMakeLists.txt
tier4_api_msgs/msg/: AwapiAutowareStatus.msg
tier4_auto_msgs_converter/: package.xml
tier4_control_msgs/: CMakeLists.txt  package.xml
tier4_control_msgs/msg/: IsStopped.msg
tier4_control_msgs/srv/: SetPause.srv  SetStop.srv
tier4_external_api_msgs/: CMakeLists.txt  package.xml
tier4_external_api_msgs/msg/: CalibrationStatus.msg  CalibrationStatusArray.msg  CalibrationStatusStamped.msg  CpuStatus.msg  CpuUsage.msg  LocalizationScoreArray.msg  RosbagCopyStatus.msg  RosbagLoggingMode.msg  RosbagRecordStatus.msg
tier4_external_api_msgs/srv/: CalibrationDataRequest.srv  GetAccelBrakeMapCalibrationData.srv  GetRosbagCopyList.srv  SetRosbagLoggingMode.srv  SetRosbagRecord.srv
tier4_hmi_msgs/: CMakeLists.txt  package.xml
tier4_hmi_msgs/srv/: GetVolume.srv  SetVolume.srv
tier4_localization_msgs/: CMakeLists.txt  package.xml
tier4_localization_msgs/msg/: EkfError.msg  LocalizationError.msg  LocalizationScore.msg  LocalizationStatus.msg
tier4_localization_msgs/srv/: PoseWithCovarianceStamped.srv  TriggerNode.srv
tier4_map_msgs/: CMakeLists.txt  package.xml
tier4_map_msgs/msg/: MapProjectorInfo.msg  MapProjectorType.msg  VerticalDatum.msg
tier4_perception_msgs/: CMakeLists.txt  package.xml
tier4_planning_msgs/: CMakeLists.txt  package.xml
tier4_planning_msgs/msg/: AccelerationConstraint.msg  AvoidanceDebugFactor.msg  AvoidanceDebugMsg.msg  AvoidanceDebugMsgArray.msg  AvoidanceFactor.msg  AvoidanceInfo.msg  AvoidanceInfoArray.msg  LaneChangeDebugMsg.msg  LaneChangeDebugMsgArray.msg  MotionFactor.msg  MotionFactorArray.msg  PathChangeModuleId.msg  PathWithLaneId.msg  RerouteAvailability.msg  RouteState.msg  SafetyCheckDebugMsg.msg  SafetyCheckDebugMsgArray.msg  StopReason.msg  StopReason2.msg  StopReason2Array.msg
tier4_planning_msgs/srv/: ClearRoute.srv  SetLaneletRoute.srv  SetWaypointRoute.srv
tier4_rtc_msgs/: CMakeLists.txt  README.md  package.xml
tier4_rtc_msgs/msg/: AutoModeStatus  AutoModeStatus.msg  AutoModeStatusArray.msg  Command.msg  CooperateCommand.msg  CooperateResponse.msg  CooperateStatus.msg  CooperateStatusArray.msg  Module.msg
tier4_rtc_msgs/srv/: AutoMode.srv  AutoModeWithModule.srv  CooperateCommand.srv  CooperateCommands.srv
tier4_simulation_msgs/: CMakeLists.txt  package.xml
tier4_simulation_msgs/msg/: Condition.msg  ConditionGroup.msg  ConditionGroups.msg  ConditionGroupsCollection.msg  (+1 more)
tier4_system_msgs/: CMakeLists.txt  README.md  package.xml
tier4_v2x_msgs/: CMakeLists.txt  package.xml
tier4_vehicle_msgs/: CMakeLists.txt  package.xml
(+54 files in other folders)
